Configure jlink manually, not via plugin.