@@ -1,7 +1,6 @@
 import groovy.text.SimpleTemplateEngine
 
 plugins {
-    id 'org.beryx.jlink' version '2.17.2'
     id 'groovy'
     id 'application'
     id 'maven'
@@ -26,23 +25,37 @@ tasks.withType( JavaCompile ) {
     options.encoding = 'UTF-8'
 }
 
-jlink {
-    options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
-    launcher{
-        name = 'logfx'
-        jvmArgs = ['-Xmx60m', '-splash:$ROOTDIR/lib/app/lofx-logo.png']
-    }
-    addExtraDependencies("javafx")
-    jpackage {
-        imageOptions = ['--icon', 'src/main/resources/com/athaydes/logfx/images/favicon-small.png']
+def libs = "${buildDir}/libs"
+def image = "${buildDir}/image"
+
+task deps {
+    doLast {
+        copy {
+            from configurations.runtimeClasspath
+            into libs
+        }
     }
 }
 
-tasks.jpackageImage.doLast {
-    copy {
-        from "docs/images/lofx-logo.png"
-        into "build/jpackage/$project.name/lib/app/"
-    }
+task copyLogoToImage( type: Copy ) {
+    from "docs/images/lofx-logo.png"
+    into "$image/bin/"
+}
+
+task jlink( type: Exec ) {
+    dependsOn jar, deps
+    finalizedBy copyLogoToImage
+    inputs.files( sourceSets*.allSource )
+    outputs.dir( image )
+    def options = [
+            '--module-path', libs,
+            '--add-modules', 'java.base,java.desktop,javafx.controls,javafx.fxml,jdk.unsupported,org.slf4j,com.athaydes.logfx',
+            '--launcher', 'logfx=com.athaydes.logfx/com.athaydes.logfx.LogFX',
+            '--output', image,
+            '--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages' ]
+    def jlink = System.getProperty( 'java.home' ) + '/bin/jlink'
+    commandLine( [ jlink ] + options )
+    doFirst { new File( image ).deleteDir() }
 }
 
 //final generatedJavaSources = "$buildDir/java-generated-sources"
@@ -75,7 +88,7 @@ task generateJavaSources(
     def properties = [ logfxVersion: version ]
     def templates = fileTree( dir: 'src/main/java-templates' )
 //    def destination = file( generatedJavaSources )
-    def destination = file('src/main/java')
+    def destination = file( 'src/main/java' )
 
     doLast {
         templates.visit { item ->
